--- a/css/styles.css
+++ b/css/styles.css
@@ -94,10 +94,14 @@ img {
 
 /*Секція-герой-Студія*/
 .hero {
+  background-size: cover;
   background-color: var(--color-hero);
-  background-image: url(../images/bgimg.jpg);
-  margin: 0 auto;
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+    url(../images/bgimg.jpg);
   background-repeat: no-repeat;
+  padding: 200px 0;
+  margin: 0 auto;
+  max-width: 1600px;
 }
 .hero-title {
   color: var(--color-white);
@@ -394,7 +398,7 @@ img {
   justify-content: center;
   align-items: center;
   gap: 40px;
-  flex-basis: calc((100%-150px) / 6);
+  /* flex-basis: calc((100%-150px) / 6); */
 }
 .regular-customers-title {
   margin-bottom: 50px;
@@ -407,14 +411,22 @@ img {
   flex-basis: calc((100%-150px) / 6);
   justify-content: center;
   align-items: center;
-  fill: var(--color-icon);
   width: 170px;
   height: 92px;
-  border: 1px solid var(--color-icon);
-  border-radius: 4px;
-  cursor: pointer;
+  /* cursor: pointer; */
 }
-.regular-customer-item:hover {
+.regular-customer-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  border-radius: 4px;
+  fill: var(--color-icon);
+  border: 1px solid var(--color-icon);
+}
+.regular-customer-link:hover,
+:focus {
   fill: var(--color-accent);
   border-color: var(--color-accent);
 }
@@ -428,8 +440,11 @@ img {
   margin-bottom: 30px;
   border-radius: 4px;
 }
-
-.social {
+.container-position {
+  display: flex;
+  align-items: baseline;
+}
+.social-footer {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -441,7 +456,7 @@ img {
   line-height: 1.15;
   letter-spacing: 0.03em;
 }
-.social-links {
+.social-footer-links {
   display: flex;
   justify-content: center;
   align-items: center;
