--- a/css/styles.css
+++ b/css/styles.css
@@ -81,15 +81,21 @@ img {
   color: var(--color-accent);
 }
 .contact-link {
+  display: flex;
+  gap: 10px;
+  justify-content: center;
+  align-items: center;
   text-decoration: none;
   color: var(--secondary-text-color);
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
+  fill: var(--secondary-text-color);
 }
 .contact-link:hover,
 .contact-link:focus {
   color: var(--color-accent);
+  fill: var(--color-accent);
 }
 
 /*Секція-герой-Студія*/
@@ -229,6 +235,7 @@ img {
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
+  color: var(--primary-text-color);
 }
 .portfolio-text {
   line-height: 1.87;
@@ -371,6 +378,15 @@ img {
   flex-wrap: wrap;
   gap: 30px;
 }
+.portfolio-link {
+  text-decoration: none;
+  display: block;
+}
+.portfolio-link:hover,
+.portfolio-link:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
+}
 .portfolio-card-text-positions {
   padding: 20px 24px;
   border-bottom: 1px solid var(--border-color-portfolio);
@@ -385,20 +401,12 @@ img {
   max-width: 1230px;
 }
 /* HW4 */
-.contact-list {
-  display: flex;
-  gap: 10px;
-}
-.contact-list:hover,
-:focus {
-  fill: var(--color-accent);
-}
+
 .regular-customers {
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 40px;
-  /* flex-basis: calc((100%-150px) / 6); */
 }
 .regular-customers-title {
   margin-bottom: 50px;
@@ -413,7 +421,6 @@ img {
   align-items: center;
   width: 170px;
   height: 92px;
-  /* cursor: pointer; */
 }
 .regular-customer-link {
   display: flex;
@@ -426,7 +433,7 @@ img {
   border: 1px solid var(--color-icon);
 }
 .regular-customer-link:hover,
-:focus {
+.regular-customer-link:focus {
   fill: var(--color-accent);
   border-color: var(--color-accent);
 }
@@ -481,7 +488,7 @@ img {
   fill: var(--color-white);
 }
 .social-footer-link:hover,
-:focus {
+.social-footer-link:focus {
   background-color: var(--color-accent);
 }
 .team-social {
@@ -506,7 +513,7 @@ img {
   fill: var(--color-icon);
 }
 .team-link:hover,
-:focus {
+.team-link:focus {
   fill: var(--color-white);
   background-color: var(--color-accent);
 }
