--- a/css/styles.css
+++ b/css/styles.css
@@ -267,7 +267,7 @@ img {
   color: var(--color-accent);
 }
 
-/* Почfток розмітки Flex*/
+/* Початок розмітки Flex*/
 .container {
   width: 100%;
   max-width: 1230px;
